# lan743x-config

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  licence.txt  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cpp.yaml
cmake/: TestSettings.cmake
doc/: layout.txt
src/: CMakeLists.txt  lan7430-config.cpp
src/include/: validators.hpp  version.hpp.in
src/lib/lan7430conf/: CMakeLists.txt
src/lib/lan7430conf/include/lan7430conf/: byte.hpp  errors.hpp  lan7430conf.hpp
src/lib/lan7430conf/src/: errors.cpp  lan7430conf.cpp
src/lib/lan7430conf/test/: 000-main.cpp  010-testMac.cpp  020-testWriteEeprom.cpp  021-testReadEeprom.cpp  030-testByte.cpp  CMakeLists.txt  shared.hpp
